// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XPA 1`] = `
Array [
  Array [
    "湘音检字",
    "風",
    Array [
      "hong1",
      "hong3",
    ],
  ],
  Array [
    "长沙话音档",
    "風",
    Array [
      "hong1",
    ],
  ],
  Array [
    "汉语方音字汇",
    "風",
    Array [
      "hen1",
    ],
  ],
]
`;

exports[`XPA 2`] = `
Array [
  Array [
    "湘音检字",
    "日",
    Array [
      "ri6",
      "mi6",
      "gni6",
    ],
  ],
  Array [
    "长沙话音档",
    "日",
    Array [
      "ri6",
      "gni6",
    ],
  ],
  Array [
    "汉语方音字汇",
    "日",
    Array [
      "gni6",
      "ri6",
    ],
  ],
]
`;

exports[`XPA 3`] = `
Array [
  Array [
    "湘音检字",
    "吉",
    Array [
      "ji6",
    ],
  ],
  Array [
    "长沙话音档",
    "吉",
    Array [
      "ji6",
    ],
  ],
  Array [
    "汉语方音字汇",
    "吉",
    Array [
      "ji6",
    ],
  ],
]
`;

exports[`XPA 4`] = `
Array [
  Array [
    "湘音检字",
    "辰",
    Array [
      "shen2",
    ],
  ],
  Array [
    "长沙话音档",
    "辰",
    Array [
      "shen2",
    ],
  ],
  Array [
    "汉语方音字汇",
    "辰",
    Array [
      "sen2",
    ],
  ],
]
`;

exports[`XPA 5`] = `
Array [
  Array [
    "湘音检字",
    "人",
    Array [
      "ren2",
    ],
  ],
  Array [
    "长沙话音档",
    "人",
    Array [
      "ren2",
    ],
  ],
  Array [
    "汉语方音字汇",
    "人",
    Array [
      "ren2",
    ],
  ],
]
`;

exports[`XPA 6`] = `
Array [
  Array [
    "湘音检字",
    "卻",
    Array [
      "qio6",
    ],
  ],
  Array [
    "长沙话音档",
    "卻",
    Array [
      "qio6",
    ],
  ],
  Array [
    "汉语方音字汇",
    "卻",
    Array [],
  ],
]
`;

exports[`toneType: CSToneNo 1`] = `
Array [
  Array [
    "湘音检字",
    Array [
      "y6",
      "ȵiɑ4",
    ],
  ],
  Array [
    "长沙话音档",
    Array [
      "y6",
    ],
  ],
  Array [
    "汉语方音字汇",
    Array [
      "y6",
    ],
  ],
]
`;

exports[`toneType: OctetToneNo 1`] = `
Array [
  Array [
    "湘音检字",
    Array [
      "y7",
      "ȵiɑ5",
    ],
  ],
  Array [
    "长沙话音档",
    Array [
      "y7",
    ],
  ],
  Array [
    "汉语方音字汇",
    Array [
      "y7",
    ],
  ],
]
`;

exports[`toneType: ToneLetter 1`] = `
Array [
  Array [
    "湘音检字",
    Array [
      "y˨˦",
      "ȵiɑ˥˥",
    ],
  ],
  Array [
    "长沙话音档",
    Array [
      "y˨˦",
    ],
  ],
  Array [
    "汉语方音字汇",
    Array [
      "y˨˦",
    ],
  ],
]
`;

exports[`toneType: ToneName 1`] = `
Array [
  Array [
    "湘音检字",
    Array [
      "y入声",
      "ȵiɑ阴去",
    ],
  ],
  Array [
    "长沙话音档",
    Array [
      "y入声",
    ],
  ],
  Array [
    "汉语方音字汇",
    Array [
      "y入声",
    ],
  ],
]
`;

exports[`toneType: ToneValue 1`] = `
Array [
  Array [
    "湘音检字",
    Array [
      "y24",
      "ȵiɑ55",
    ],
  ],
  Array [
    "长沙话音档",
    Array [
      "y24",
    ],
  ],
  Array [
    "汉语方音字汇",
    Array [
      "y24",
    ],
  ],
]
`;

exports[`toneType: XYZ 1`] = `
Array [
  Array [
    "湘音检字",
    Array [
      "y6",
      "ȵiɑ4",
    ],
  ],
  Array [
    "长沙话音档",
    Array [
      "y6",
    ],
  ],
  Array [
    "汉语方音字汇",
    Array [
      "y6",
    ],
  ],
]
`;
